--- a/css/style.css
+++ b/css/style.css
@@ -3,30 +3,42 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .contenitore{
     width: 90%;
     background-color: aqua;
+}
+hr{
+    border: 1px solid black;
+    margin-top: 10px;
 }
 /*HEADER*/
 .contenitore-main{
     background-color: lime;
     width: 1000px;
+    height: 1000px;
     margin: auto;
     margin-top: 150px;
 }
-.btn1{
-    background-color: magenta;
-    border: 3px solid orange;
+.btn{
+    
+    border: 3px solid lightgrey;
     display: inline-block;
     padding: 10px;
     border-radius: 10px;
     margin-left: 30px;
+    font-weight: bolder;
+    margin-top: 20px;
 }
-.btn2{
-    background-color: orange;
-    border: 3px solid magenta;
-    display: inline-block;
-    padding: 10px;
-    border-radius: 10px;
-    
+#btn1{
+    background-color: #47adf1;
+    color: white;
+    border: 1px solid #47adf1;
+}
+#btn2{
+    background-color: white;
+    color: lightgrey;
+    border: 1px solid lightgrey;
 }
